--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,32 @@
-<button ng-click="add()">Add</button>
+<div class="main">
+  <div class="notifier">
+    <h1>Notifier</h1>
+    <form ng-submit="submit()">
+      <div class="option-group">
+        <label for="info">
+          <input type="radio" ng-model="model.type" id="info" value="info">
+          <i class="fa fa-info-circle" aria-hidden="true"></i>
+          Info
+        </label>
+        <label for="warning">
+          <input type="radio" ng-model="model.type" id="warning" value="warning">
+          <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+          Warning
+        </label>
+        <label for="error">
+          <input type="radio" ng-model="model.type" id="error" value="error">
+          <i class="fa fa-times-circle" aria-hidden="true"></i> Error
+        </label>
+      </div>
+      <div class="form-group">
+        <input type="text" ng-model="model.title" placeholder="Title">
+      </div>
+      <div class="form-group">
+        <textarea name="" id="" rows="5" ng-model="model.content" placeholder="Content"></textarea>
+      </div>
+      <button type="submit">Send Notification</button>
+    </form>
+  </div>
+</div>
 
 <notifications></notifications>
