--- a/app/styles/components/_notifications.scss
+++ b/app/styles/components/_notifications.scss
@@ -62,6 +62,9 @@ notifications{
     display: flex;
     align-items: center;
   }
+  .meta{
+    flex-grow: 1;
+  }
   .title{
     font-weight: bold;
     text-transform: uppercase;
